[tool.poetry]
name = "phfnbutils"
version = "0.1.0"
description = "A collection of small utilities of mine for running small-sized computations and for jupyter notebooks in general"
license = "MIT"
authors = ["Philippe Faist <phfaist@gmail.com>"]
homepage = "https://github.com/phfaist/phfnbutils"
repository = "https://github.com/phfaist/phfnbutils"
readme = "README.rst"
classifiers = [
        "Development Status :: 4 - Beta",
        "License :: OSI Approved :: MIT License",
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
# Python 3.7 for weird multiprocessing lock/pickling errors on 3.6
python = "^3.7"
h5py = "^2.10.0"
numpy = "^1.19.1"
filelock = "^3.0.12"
tqdm = "^4.48.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
